--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "check-format": "prettier -c \"./**/*.{js,css,json,scss}\""
     },
     "eslintConfig": {
-        "extends": "react-app"
+        "extends": "./node_modules/standard/eslintrc.json"
     },
     "browserslist": {
         "production": [
@@ -53,6 +53,7 @@
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "dotenv": "^8.2.0",
-        "prettier": "^2.3.1"
+        "prettier": "^2.3.1",
+        "standard": "^17.1.0"
     }
 }
